<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Login -->
    <string name="app_name" translatable="false">ManageProduct</string>
    <string name="txv_User">Usuario</string>
    <string name="txv_Pass">Contraseña</string>
    <string name="chb_Remember">Recordar</string>
    <string name="btn_Login" translatable="false">Login</string>
    <string name="btn_Register">Registrar</string>
    <string name="messagePassword">Introduzca la contraseña</string>
    <string name="messageUser">Introduzca el usuario</string>

    <!-- Register -->
    <string name="txv_UserRegister">Usuario</string>
    <string name="txv_PassRegister">Contraseña</string>
    <string name="txv_ConfirmPass">Confirmar contraseña</string>
    <string name="txv_Email">Email</string>
    <string name="txv_ConfirmEmail">Confirmar email</string>
    <string name="txv_ProvinceRegister">Provincia</string>
    <string name="txv_CityRegister">Localidad</string>
    <string name="rg_CompanyParticular">Tipo usuario</string>
    <string name="rb_Company">Empresa</string>
    <string name="rb_Particular">Particular</string>
    <string name="txv_CompanyNameRegister">Nombre de empresa</string>
    <string name="btn_ConfirmSignup">Registrarse</string>
    <string name="Toast_SuccessfulRegister">Registro exitoso</string>
    <string name="Toast_SelectedCity">Ha seleccionado %1$s (%2$s)</string>

    <!-- Menu -->
    <string name="action_add_product">Añadir</string>
    <string name="action_sort_alphabetically">Ordenar alfabeticamente</string>
    <string name="action_settings_general">Opciones</string>
    <string name="action_settings_account">Cuenta</string>

    <string name="ctx_menu_product_delete">Borrar</string>

    <!-- AddProduct-->
    <string name="edt_Name">Nombre</string>
    <string name="edt_Description">Descripción</string>
    <string name="edt_Brand">Marca</string>
    <string name="edt_Dosage">Concentración</string>
    <string name="edt_Price">Precio</string>
    <string name="edt_Stock">Existencias</string>
    <string name="edt_Image">Imagen</string>
    <string name="btn_AddProduct">Añadir</string>
    <string name="btn_AddProduct_Edit">Editar</string>

</resources>
