<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Add -->
    <item android:icon="@android:drawable/ic_menu_add"
        android:id="@+id/action_add_product"
        app:showAsAction="always"
        android:title="@string/action_add_product"/>

    <!-- Sort Alphatically -->
    <item android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:id="@+id/action_sort_alphabetically"
        app:showAsAction="always"
        android:title="@string/action_sort_alphabetically" />

    <!-- Settings General -->
    <item android:title="@string/action_settings_general"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/action_settings_general"/>

    <!-- Account Settings -->
    <item android:title="@string/action_settings_account"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/action_settings_account"/>
</menu>