<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielacedo.manageproductrecycler.Login_Activity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hint"
        android:id="@+id/til_User">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/messageUser"
            android:id="@+id/edt_User" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_User"
        android:layout_alignStart="@id/til_User"
        android:layout_alignLeft="@id/til_User"
        android:layout_marginTop="@dimen/widget_margin_top"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        android:id="@+id/til_Password">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/messagePassword"
            android:maxLength="20"
            android:id="@+id/edt_Pass" />

    </android.support.design.widget.TextInputLayout>


    <CheckBox
        android:text="@string/chb_Remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_Password"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/widget_margin_top"
        android:layout_alignParentEnd="true"
        android:id="@+id/chb_Remember" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/chb_Remember"
        >


        <Button
            android:text="@string/btn_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selbtnlogin"
            android:id="@+id/btn_Login"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            />

        <Button
            android:text="@string/btn_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selbtnlogin"
            android:id="@+id/btn_Register"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginLeft="10dp"
            android:layout_weight="1" />

    </LinearLayout>


</RelativeLayout>
